# Machine-Learning-GUILLAUMIN-LIRZIN-MAILLARD

./: CMakeLists.txt  GUILLAUMIN_LIRZIN_MAILLARD_Rapport_intermédiaire_3.docx  GUILLAUMIN_LIRZIN_MAILLARD_Rendu_2.txt  Rendu_2
lib/: CMakeLists.txt  Color.cpp  Color.hpp  LinearModel.cpp  LinearModel.hpp  MLP.cpp  MLP.hpp  MLP_c_wrapper.cpp  ML_c_wrapper.cpp  Makefile  MultiLayerPerceptron.cpp  MultiLayerPerceptron.hpp  MultiLayerPerceptron_c_wrapper.cpp  MultiLevelPerceptron.cpp  MultiLevelPerceptron.hpp  MultiLevelPerceptron_c_wrapper.cpp  Point.hpp  RBF.cpp  RBF.hpp  exemple_Rosenblatt.cpp  exemple_Rosenblatt.hpp  main.cpp  mainMLP  mainMLP.cpp
lib/draft/: Color.cpp  LinearModel.hpp  MultiLayerPerceptron.hpp  NewLinearModel.cpp  NewLinearModel.hpp  Point.cpp  exemple_Rosenblatt.hpp  main.cpp
tests/: Cas_de_tests.ipynb
